fix segment-container width, adjust scrollbar

--- a/styles/helpers/_media.scss
+++ b/styles/helpers/_media.scss
@@ -27,3 +27,9 @@
     margin-bottom: 30px;
   }
 }
+
+@media (max-width: 480px) {
+  .segment-container {
+    width: 95%;
+  }
+}
