--- a/styles/main.scss
+++ b/styles/main.scss
@@ -183,7 +183,7 @@ input:checked + .slider:before {
   &::-webkit-scrollbar {
     background-color: #fff;
     border-radius: 10px;
-    width: 10px; 
+    width: 7px; 
   }
   &::-webkit-scrollbar-track {
     background-color: #ccc;
